--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -29,10 +29,19 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fxe-9g-o9C">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="stop"/>
+                                <connections>
+                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VD5-ci-A9X"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Fxe-9g-o9C" firstAttribute="top" secondItem="GJG-3J-IOX" secondAttribute="bottom" constant="174.5" id="DA8-8X-rFn"/>
                             <constraint firstItem="Kzu-4i-tB0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="KAa-eQ-LgD"/>
+                            <constraint firstItem="Fxe-9g-o9C" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YaE-US-8ou"/>
                             <constraint firstItem="GJG-3J-IOX" firstAttribute="top" secondItem="Kzu-4i-tB0" secondAttribute="bottom" constant="32" id="ggI-OW-3oO"/>
                             <constraint firstItem="Kzu-4i-tB0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kxH-Db-lYK"/>
                             <constraint firstItem="GJG-3J-IOX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wIj-k9-pto"/>
@@ -41,24 +50,30 @@
                             <mask key="subviews">
                                 <exclude reference="Kzu-4i-tB0"/>
                                 <exclude reference="GJG-3J-IOX"/>
+                                <exclude reference="Fxe-9g-o9C"/>
                             </mask>
                             <mask key="constraints">
                                 <exclude reference="KAa-eQ-LgD"/>
                                 <exclude reference="kxH-Db-lYK"/>
                                 <exclude reference="ggI-OW-3oO"/>
                                 <exclude reference="wIj-k9-pto"/>
+                                <exclude reference="DA8-8X-rFn"/>
+                                <exclude reference="YaE-US-8ou"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular">
                             <mask key="subviews">
                                 <include reference="Kzu-4i-tB0"/>
                                 <include reference="GJG-3J-IOX"/>
+                                <include reference="Fxe-9g-o9C"/>
                             </mask>
                             <mask key="constraints">
                                 <include reference="KAa-eQ-LgD"/>
                                 <include reference="kxH-Db-lYK"/>
                                 <include reference="ggI-OW-3oO"/>
                                 <include reference="wIj-k9-pto"/>
+                                <include reference="DA8-8X-rFn"/>
+                                <include reference="YaE-US-8ou"/>
                             </mask>
                         </variation>
                     </view>
@@ -72,5 +87,6 @@
     </scenes>
     <resources>
         <image name="microphone" width="100" height="100"/>
+        <image name="stop" width="50" height="50"/>
     </resources>
 </document>
