--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z5q-y8-iZl">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -41,9 +42,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Fxe-9g-o9C" firstAttribute="top" secondItem="GJG-3J-IOX" secondAttribute="bottom" constant="174.5" id="DA8-8X-rFn"/>
                             <constraint firstItem="Kzu-4i-tB0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="KAa-eQ-LgD"/>
                             <constraint firstItem="Fxe-9g-o9C" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YaE-US-8ou"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Fxe-9g-o9C" secondAttribute="bottom" constant="75" id="duk-Xp-fTK"/>
                             <constraint firstItem="GJG-3J-IOX" firstAttribute="top" secondItem="Kzu-4i-tB0" secondAttribute="bottom" constant="32" id="ggI-OW-3oO"/>
                             <constraint firstItem="Kzu-4i-tB0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kxH-Db-lYK"/>
                             <constraint firstItem="GJG-3J-IOX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wIj-k9-pto"/>
@@ -55,7 +56,7 @@
                                 <exclude reference="Fxe-9g-o9C"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="DA8-8X-rFn"/>
+                                <exclude reference="duk-Xp-fTK"/>
                                 <exclude reference="YaE-US-8ou"/>
                                 <exclude reference="KAa-eQ-LgD"/>
                                 <exclude reference="kxH-Db-lYK"/>
@@ -70,7 +71,7 @@
                                 <include reference="Fxe-9g-o9C"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="DA8-8X-rFn"/>
+                                <include reference="duk-Xp-fTK"/>
                                 <include reference="YaE-US-8ou"/>
                                 <include reference="KAa-eQ-LgD"/>
                                 <include reference="kxH-Db-lYK"/>
@@ -112,17 +113,29 @@
                                     <action selector="playSlowAudio:" destination="POo-8D-JbT" eventType="touchUpInside" id="GmL-p7-3qw"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UgB-dI-dIO">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="rabbit"/>
+                                <connections>
+                                    <action selector="playFastAudio:" destination="POo-8D-JbT" eventType="touchUpInside" id="OP0-i1-bGD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="UgB-dI-dIO" secondAttribute="trailing" constant="50" id="1c0-VQ-Olb"/>
                             <constraint firstItem="lfF-2M-SQd" firstAttribute="top" secondItem="rvo-4O-hOE" secondAttribute="bottom" constant="150" id="Cly-Em-YsR"/>
-                            <constraint firstItem="lfF-2M-SQd" firstAttribute="leading" secondItem="JTJ-D2-HzM" secondAttribute="leadingMargin" constant="100" id="PtE-B4-bdV"/>
+                            <constraint firstItem="lfF-2M-SQd" firstAttribute="leading" secondItem="JTJ-D2-HzM" secondAttribute="leadingMargin" constant="50" id="PtE-B4-bdV"/>
+                            <constraint firstItem="UgB-dI-dIO" firstAttribute="top" secondItem="rvo-4O-hOE" secondAttribute="bottom" constant="150" id="TpQ-ut-R46"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="lfF-2M-SQd"/>
+                                <exclude reference="UgB-dI-dIO"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="1c0-VQ-Olb"/>
+                                <exclude reference="TpQ-ut-R46"/>
                                 <exclude reference="Cly-Em-YsR"/>
                                 <exclude reference="PtE-B4-bdV"/>
                             </mask>
@@ -130,8 +143,11 @@
                         <variation key="heightClass=regular">
                             <mask key="subviews">
                                 <include reference="lfF-2M-SQd"/>
+                                <include reference="UgB-dI-dIO"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="1c0-VQ-Olb"/>
+                                <include reference="TpQ-ut-R46"/>
                                 <include reference="Cly-Em-YsR"/>
                                 <include reference="PtE-B4-bdV"/>
                             </mask>
@@ -163,6 +179,7 @@
     </scenes>
     <resources>
         <image name="microphone" width="100" height="100"/>
+        <image name="rabbit" width="100" height="100"/>
         <image name="snail" width="100" height="100"/>
         <image name="stop" width="50" height="50"/>
     </resources>
