--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -109,9 +109,6 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lfF-2M-SQd">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" image="snail"/>
-                                <variation key="heightClass=regular" misplaced="YES">
-                                    <rect key="frame" x="70" y="214" width="100" height="100"/>
-                                </variation>
                                 <connections>
                                     <action selector="playSlowAudio:" destination="POo-8D-JbT" eventType="touchUpInside" id="GmL-p7-3qw"/>
                                 </connections>
@@ -119,9 +116,6 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UgB-dI-dIO">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <state key="normal" image="rabbit"/>
-                                <variation key="heightClass=regular" misplaced="YES">
-                                    <rect key="frame" x="430" y="214" width="100" height="100"/>
-                                </variation>
                                 <connections>
                                     <action selector="playFastAudio:" destination="POo-8D-JbT" eventType="touchUpInside" id="OP0-i1-bGD"/>
                                 </connections>
@@ -133,14 +127,23 @@
                                     <action selector="stopPlayingAudio:" destination="POo-8D-JbT" eventType="touchUpInside" id="b8m-pe-e31"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KXs-N7-14c">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" image="chipmunk"/>
+                                <connections>
+                                    <action selector="playWithChipmunkEffect:" destination="POo-8D-JbT" eventType="touchUpInside" id="5w0-M2-Xvy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="UgB-dI-dIO" secondAttribute="trailing" constant="50" id="1c0-VQ-Olb"/>
                             <constraint firstItem="qbK-RG-kqT" firstAttribute="top" secondItem="MFD-5T-gzh" secondAttribute="bottom" constant="75" id="4Lk-Y4-1gy"/>
-                            <constraint firstItem="lfF-2M-SQd" firstAttribute="top" secondItem="rvo-4O-hOE" secondAttribute="bottom" constant="150" id="Cly-Em-YsR"/>
+                            <constraint firstItem="lfF-2M-SQd" firstAttribute="top" secondItem="rvo-4O-hOE" secondAttribute="bottom" constant="125" id="Cly-Em-YsR"/>
                             <constraint firstItem="lfF-2M-SQd" firstAttribute="leading" secondItem="JTJ-D2-HzM" secondAttribute="leadingMargin" constant="50" id="PtE-B4-bdV"/>
-                            <constraint firstItem="UgB-dI-dIO" firstAttribute="top" secondItem="rvo-4O-hOE" secondAttribute="bottom" constant="150" id="TpQ-ut-R46"/>
+                            <constraint firstItem="KXs-N7-14c" firstAttribute="leading" secondItem="JTJ-D2-HzM" secondAttribute="leadingMargin" constant="50" id="RJx-Xw-nRN"/>
+                            <constraint firstItem="UgB-dI-dIO" firstAttribute="top" secondItem="rvo-4O-hOE" secondAttribute="bottom" constant="125" id="TpQ-ut-R46"/>
+                            <constraint firstItem="KXs-N7-14c" firstAttribute="top" secondItem="lfF-2M-SQd" secondAttribute="bottom" constant="100" id="Uzo-fh-doF"/>
                             <constraint firstItem="MFD-5T-gzh" firstAttribute="centerX" secondItem="JTJ-D2-HzM" secondAttribute="centerX" id="wro-nB-JSy"/>
                         </constraints>
                         <variation key="default">
@@ -148,14 +151,17 @@
                                 <exclude reference="lfF-2M-SQd"/>
                                 <exclude reference="UgB-dI-dIO"/>
                                 <exclude reference="MFD-5T-gzh"/>
+                                <exclude reference="KXs-N7-14c"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="4Lk-Y4-1gy"/>
-                                <exclude reference="wro-nB-JSy"/>
-                                <exclude reference="1c0-VQ-Olb"/>
-                                <exclude reference="TpQ-ut-R46"/>
                                 <exclude reference="Cly-Em-YsR"/>
                                 <exclude reference="PtE-B4-bdV"/>
+                                <exclude reference="RJx-Xw-nRN"/>
+                                <exclude reference="Uzo-fh-doF"/>
+                                <exclude reference="1c0-VQ-Olb"/>
+                                <exclude reference="TpQ-ut-R46"/>
+                                <exclude reference="wro-nB-JSy"/>
+                                <exclude reference="4Lk-Y4-1gy"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular">
@@ -163,14 +169,17 @@
                                 <include reference="lfF-2M-SQd"/>
                                 <include reference="UgB-dI-dIO"/>
                                 <include reference="MFD-5T-gzh"/>
+                                <include reference="KXs-N7-14c"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="4Lk-Y4-1gy"/>
-                                <include reference="wro-nB-JSy"/>
-                                <include reference="1c0-VQ-Olb"/>
-                                <include reference="TpQ-ut-R46"/>
                                 <include reference="Cly-Em-YsR"/>
                                 <include reference="PtE-B4-bdV"/>
+                                <include reference="RJx-Xw-nRN"/>
+                                <include reference="Uzo-fh-doF"/>
+                                <include reference="1c0-VQ-Olb"/>
+                                <include reference="TpQ-ut-R46"/>
+                                <include reference="wro-nB-JSy"/>
+                                <include reference="4Lk-Y4-1gy"/>
                             </mask>
                         </variation>
                     </view>
@@ -199,6 +208,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="chipmunk" width="100" height="100"/>
         <image name="microphone" width="100" height="100"/>
         <image name="rabbit" width="100" height="100"/>
         <image name="snail" width="100" height="100"/>
