Add "tap to record" label

--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -38,14 +38,22 @@
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VD5-ci-A9X"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uR-Xk-84v">
+                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Kzu-4i-tB0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="KAa-eQ-LgD"/>
+                            <constraint firstItem="2uR-Xk-84v" firstAttribute="top" secondItem="Kzu-4i-tB0" secondAttribute="bottom" constant="32" id="XfQ-m7-iQb"/>
                             <constraint firstItem="Fxe-9g-o9C" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YaE-US-8ou"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Fxe-9g-o9C" secondAttribute="bottom" constant="75" id="duk-Xp-fTK"/>
                             <constraint firstItem="GJG-3J-IOX" firstAttribute="top" secondItem="Kzu-4i-tB0" secondAttribute="bottom" constant="32" id="ggI-OW-3oO"/>
                             <constraint firstItem="Kzu-4i-tB0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kxH-Db-lYK"/>
+                            <constraint firstItem="2uR-Xk-84v" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lQB-Ty-Ad2"/>
                             <constraint firstItem="GJG-3J-IOX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="wIj-k9-pto"/>
                         </constraints>
                         <variation key="default">
@@ -53,14 +61,17 @@
                                 <exclude reference="Kzu-4i-tB0"/>
                                 <exclude reference="GJG-3J-IOX"/>
                                 <exclude reference="Fxe-9g-o9C"/>
+                                <exclude reference="2uR-Xk-84v"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="duk-Xp-fTK"/>
-                                <exclude reference="YaE-US-8ou"/>
                                 <exclude reference="KAa-eQ-LgD"/>
                                 <exclude reference="kxH-Db-lYK"/>
+                                <exclude reference="XfQ-m7-iQb"/>
+                                <exclude reference="lQB-Ty-Ad2"/>
                                 <exclude reference="ggI-OW-3oO"/>
                                 <exclude reference="wIj-k9-pto"/>
+                                <exclude reference="YaE-US-8ou"/>
+                                <exclude reference="duk-Xp-fTK"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular">
@@ -68,14 +79,17 @@
                                 <include reference="Kzu-4i-tB0"/>
                                 <include reference="GJG-3J-IOX"/>
                                 <include reference="Fxe-9g-o9C"/>
+                                <include reference="2uR-Xk-84v"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="duk-Xp-fTK"/>
-                                <include reference="YaE-US-8ou"/>
                                 <include reference="KAa-eQ-LgD"/>
                                 <include reference="kxH-Db-lYK"/>
+                                <include reference="XfQ-m7-iQb"/>
+                                <include reference="lQB-Ty-Ad2"/>
                                 <include reference="ggI-OW-3oO"/>
                                 <include reference="wIj-k9-pto"/>
+                                <include reference="YaE-US-8ou"/>
+                                <include reference="duk-Xp-fTK"/>
                             </mask>
                         </variation>
                     </view>
@@ -84,6 +98,7 @@
                         <outlet property="recordButton" destination="Kzu-4i-tB0" id="evz-MZ-Vcg"/>
                         <outlet property="recordingInProgress" destination="GJG-3J-IOX" id="ic4-86-Oub"/>
                         <outlet property="stopButton" destination="Fxe-9g-o9C" id="aqH-tn-aDv"/>
+                        <outlet property="tapToRecord" destination="2uR-Xk-84v" id="ogf-vB-5xp"/>
                         <segue destination="POo-8D-JbT" kind="show" identifier="stopRecording" id="cnk-6P-ta4"/>
                     </connections>
                 </viewController>
