--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -28,7 +28,7 @@
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="recording" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GJG-3J-IOX">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fxe-9g-o9C">
@@ -41,7 +41,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uR-Xk-84v">
                                 <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
@@ -64,14 +64,14 @@
                                 <exclude reference="2uR-Xk-84v"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="duk-Xp-fTK"/>
+                                <exclude reference="YaE-US-8ou"/>
                                 <exclude reference="KAa-eQ-LgD"/>
                                 <exclude reference="kxH-Db-lYK"/>
                                 <exclude reference="XfQ-m7-iQb"/>
                                 <exclude reference="lQB-Ty-Ad2"/>
                                 <exclude reference="ggI-OW-3oO"/>
                                 <exclude reference="wIj-k9-pto"/>
-                                <exclude reference="YaE-US-8ou"/>
-                                <exclude reference="duk-Xp-fTK"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular">
@@ -82,14 +82,14 @@
                                 <include reference="2uR-Xk-84v"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="duk-Xp-fTK"/>
+                                <include reference="YaE-US-8ou"/>
                                 <include reference="KAa-eQ-LgD"/>
                                 <include reference="kxH-Db-lYK"/>
                                 <include reference="XfQ-m7-iQb"/>
                                 <include reference="lQB-Ty-Ad2"/>
                                 <include reference="ggI-OW-3oO"/>
                                 <include reference="wIj-k9-pto"/>
-                                <include reference="YaE-US-8ou"/>
-                                <include reference="duk-Xp-fTK"/>
                             </mask>
                         </variation>
                     </view>
